cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp secao_1_2/PrimeiroCodigo/secao2.cpp secao_1_2/PrimeiroCodigo/secao1.cpp secao_4/Variaveis.cpp secao_4/TiposVariaveis.cpp secao_4/Exercicio_1.cpp secao_4/utils.cpp secao_4/utils.h secao_4/Constantes.cpp secao_4/Exercicio_2.cpp)